# rust_websockets

./: .env  Cargo.toml  database.db  docker-compose.yml
migrations/2023-03-06-195547_create_organizations/: up.sql
src/: main.rs  schema.rs
src/entities/: organization.rs
src/environment/: mod.rs
