[package]
name = "rust_websockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
diesel = { version = "2.0.3", features = ["sqlite"] }
envy = "0.4.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
tracing = "0.1.37"
tracing-actix-web = "0.7.2"
